WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
80147
[Qt] Fix tests run with WTR not using QStyle theme
https://bugs.webkit.org/show_bug.cgi?id=80147
Summary
[Qt] Fix tests run with WTR not using QStyle theme
Simon Hausmann
Reported
2012-03-02 04:38:31 PST
[Qt] Fix tests run with WTR not using QStyle theme
Attachments
Patch
(3.50 KB, patch)
2012-03-02 04:40 PST
,
Simon Hausmann
ossy
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Hausmann
Comment 1
2012-03-02 04:40:31 PST
Created
attachment 129879
[details]
Patch
Csaba Osztrogonác
Comment 2
2012-03-02 04:42:46 PST
Comment on
attachment 129879
[details]
Patch rs=me
Simon Hausmann
Comment 3
2012-03-02 04:45:26 PST
Committed
r109555
: <
http://trac.webkit.org/changeset/109555
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug