[Qt] Fix tests run with WTR not using QStyle theme https://bugs.webkit.org/show_bug.cgi?id=80147

Reviewed by Csaba Osztrogonác.

Source/WebKit2:

Use an environment variable (set by WTR) to select the QStyle theme.
This is a temporary kludge until we rebase the layout tests to use the
QStyle independent "mobile" theme. This also temporarily breaks the
force_static_libs_as_shared build.

* Target.pri:
* WebProcess/qt/WebProcessMainQt.cpp:
(WebKit::WebProcessMainQt):

Tools:

* WebKitTestRunner/qt/main.cpp:
(main): Set environment variable for web process to use QStyle theme.

Canonical link: https://commits.webkit.org/97231@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@109555 268f45cc-cd09-0410-ab3c-d52691b4dbfc