Tools/WebKitTestRunner/qt/main.cpp
@@ -92,6 +92,8 @@ int main(int argc, char** argv)
             qputenv("QT_WEBKIT_SUPPRESS_WEB_PROCESS_OUTPUT", "1");
     }
 
+    qputenv("QT_WEBKIT_USE_QSTYLE_THEME", "1");
+
     QQuickWebViewExperimental::setFlickableViewportEnabled(false);
     QApplication app(argc, argv);
     Launcher launcher(argc, argv);
